fixed create director form

--- a/app/views/director_templates/index.html.erb
+++ b/app/views/director_templates/index.html.erb
@@ -6,7 +6,7 @@
 
 <form action="/insert_director" method="post">
   <div>
-    <label for="name_field">Title</label>
+    <label for="name_field">Name</label>
     <input id="name_field" type="text" name="query_name">
   </div>
   <div>
