--- a/app/views/actor_templates/show.html.erb
+++ b/app/views/actor_templates/show.html.erb
@@ -2,9 +2,38 @@
   Actor #<%= @the_actor.id %> details
 </h1>
 
-<a href="/actors">
-  Go back
-</a>
+<div>
+  <a href="/actors">
+    Go back
+  </a>
+</div>
+<div>
+  <a href="/delete_actor/<%= @the_actor.id %>">
+    Delete actor
+  </a>
+</div>
+
+<hr>
+
+<form action="/modify_actor/<%= @the_actor.id %>" method="post">
+  <div>
+    <label for="name_field">Name</label>
+    <input id="name_field" type="text" name="the_name" value="<%= @the_actor.name %>">
+  </div>
+  <div>
+    <label for="dob_field">Dob</label>
+    <input id="dob_field" type="text" name="the_dob" value="<%= @the_actor.dob %>">
+  </div>
+  <div>
+    <label for="bio_field">Bio</label>
+    <textarea id="bio_field" name="the_bio" rows="3"><%= @the_actor.bio %></textarea>
+  </div>
+  <div>
+    <label for="image_field">Image</label>
+    <input id="image_field" type="text" name="the_image" value="<%= @the_actor.image %>">
+  </div>
+  <button>Update actor</button>
+</form>
 
 <hr>
 
@@ -100,9 +129,9 @@
 
       <td>
         <% d_id = the_movie.director_id %>
-        
+
         <% matching_directors = Director.where({ :id => d_id }) %>
-        
+
         <% the_director = matching_directors.at(0) %>
 
         <%= the_director.name %>
